[tool.poetry]
name = "spectrum"
version = "1.0.0"
description = "Higher Order Spectral Analysis toolkit"
authors = ["ixaxaar <root@ixaxaar.in>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/synergetics/spectrum"
repository = "https://github.com/synergetics/spectrum"
keywords = ["higher order spectrum", "spectral analysis", "signal processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.22.0"
scipy = "^1.8.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true